--- a/ML/BM25.md
+++ b/ML/BM25.md
@@ -31,4 +31,4 @@ V praxi se používá rozšířený BM25:
 - BM25F pro strukturované dokumenty (F = fields)
 - BM25+ zabraňuje příliš velké penalizaci dlouhých dokumentů
 
-BM25 používá defaultně Elasticsearch
+BM25 používá defaultně [[Elasticsearch|Elasticsearch]]
