--- a/Signály/kódování/Hammingovy kódy/Kód(3,1).md
+++ b/Signály/kódování/Hammingovy kódy/Kód(3,1).md
@@ -25,3 +25,5 @@ Jedničky přehlasovali nulu a zpráva byla opravena na $111$.
 Opravuje jednu chybu, nebo detekuje až dvojitou chybu!
 
 
+## Příiklady
+- [[Kód(3,1) příklad]]
