--- a/III. Algoritmy a programování/10. Programátorský model procesoru, instrukce, instrukční soubor, symbolická adresa, operace v registrech, s pamětí, IO operace.md
+++ b/III. Algoritmy a programování/10. Programátorský model procesoru, instrukce, instrukční soubor, symbolická adresa, operace v registrech, s pamětí, IO operace.md
@@ -1,2 +1,3 @@
-#todo
-Sekvence instrukcí, algoritmizace základních úloh v jazyku symbolických adres. Časování programu, podprogramy, přerušení
+# Sekvence instrukcí, algoritmizace základních úloh v jazyku symbolických adres. Časování programu, podprogramy, přerušení
+
+## Sekvence instrukcí
