--- a/V. Databázové systémy/31. Spouště a uložené procedury..md
+++ b/V. Databázové systémy/31. Spouště a uložené procedury..md
@@ -14,7 +14,7 @@ Syntax silně závislá na DBMS
 Událost
 - změna v DB, která vyvolá spuštění triggru (nezáleží, kdo jí vyvolal)
 - definovaná na relaci
-- INSERT | DELETE | UPDATE OF [seznam_sloupců]
+- `INSERT | DELETE | UPDATE OF [seznam_sloupců]`
 Podmínka
 - dotaz, který je proveden, když je trigger spuštěn
 - když výsledek dotazu je NOT NULL, podmínka platí
