--- a/1. Matematika/1. Derivace, diferenciál a integrál (definice, výpočty, praktický význam).md
+++ b/1. Matematika/1. Derivace, diferenciál a integrál (definice, výpočty, praktický význam).md
@@ -1,6 +1,20 @@
 ## Derivace #Derivace
 ### Definice derivace
-Nechť f je funkce a x číslo. Limitu lim h→0 f(x + h) − f(x) h nazveme derivací funkce f má v bodě x a označíme ji symbolem f ′ (x). Obdobně nazýváme limitu lim h→0+ f(x + h) − f(x) h ,  resp. lim h→0− f(x + h) − f(x) h  derivací zprava (zleva) funkce f v bodě x. Označovat je budeme symbolem f ′ +(x), (resp. f ′ −(x)). Neexistuje-li první, (popř. druhá, popř. třetí) z těchto limit, říkáme, že funkce f nemá v bodě x derivaci, (popř. derivaci zprava, popř. derivaci zleva). Výše zmíněné limity mohou být vlastní nebo nevlastní, pak mluvíme o vlastní nebo nevlastní derivaci.
+Derivace je matematická operace, která přiřazuje každému bodu funkce $f$ jinou funkci $f'$, která vyjadřuje okamžitou rychlost změny funkce $f$ v daném bodě. Derivace je tedy funkce, která vyjadřuje rychlost změny funkce $f$ v daném bodě. Derivace funkce $f$ v bodě $x_0$ se značí $f'(x_0)$ nebo $\frac{df}{dx}(x_0)$. 
+
+### Praktický význam derivace
+Derivace funkce $f$ v bodě $x_0$ vyjadřuje okamžitou rychlost změny funkce $f$ v bodě $x_0$.
+
+Derivace funkce $f$ v bodě $x_0$ je rovna směrnici tečny funkce $f$ v bodě $x_0$.
+
+Derivace funkce $f$ v bodě $x_0$ je rovna okamžité rychlosti pohybu bodu na křivce $y = f(x)$ v bodě $x_0$.
+
+### Výpočet derivace
+Derivace funkce $f$ v bodě $x_0$ se vypočte jako limita podílu přírůstku funkce $f$ a přírůstku argumentu, kdy přírůstek argumentu směřuje k nule.
+
+$$
+f'(x_0) = \lim_{h \to 0} \frac{f(x_0 + h) - f(x_0)}{h}
+$$
 
 #### Derivace některých běžně používaných funkcí
 
@@ -124,3 +138,120 @@ Nahradíme-li přírůstek ∆f(a, h) = f(a + h) − f(a) diferenciálem f ′ (
 Diferenciálu často používáme k přibližnému určení chyby, které se dopustíme, počítáme-li hodnotu nějaké veličiny z jiné veličiny, která byla změřena s určitou chybou. Naměříme-li např. že poloměr koule je x = 4 cm, a víme-li, že chyba měření je maximálně h = 0,1 mm, pak maximální chyba při výpočtu objemu $V (4) = \frac{4π}{3}*4^3 = \frac{256π}{3} cm^3 ≈ 268 cm^3$ je přibližně dána diferenciálem $V ′ (4) · 0, 01 = 4 · π · 4^2 · 0, 01 = 0, 64 · πcm^3 ≈ 2cm^3 .$
 
 ## Integrál #Integrál
+
+### Definice integrálu
+
+Integrál je matematická operace, která přiřazuje každé funkci $f$ jinou funkci $F$, jejíž derivace je rovna funkci $f$. Funkci $F$ nazýváme neurčitý integrál funkce $f$ a značíme ji $\int f(x)dx$. Funkci $f$ nazýváme integrand a funkci $F$ nazýváme integrální funkce.
+
+### Výpočet integrálu
+
+Integrál funkce $f$ vypočteme jako primitivní funkci funkce $f$.
+
+### Pravidla pro počítání s integrály
+
+$$
+\int (f \pm g)dx = \int f dx \pm \int g dx \quad \text{(integrál součtu a rozdílu funkcí)} \\
+$$
+
+$$
+\int (f \cdot g)dx = \int f dx \cdot \int g dx \quad \text{(integrál součinu funkcí)} \\
+$$
+
+$$
+\int \frac{f}{g}dx = \frac{\int f dx}{\int g dx} \quad \text{(integrál podílu funkcí)} \\
+$$
+
+$$
+\int f(g(x))dx = \int f(g(x)) \cdot g'(x) dx \quad \text{(integrál složené funkce)} \\
+$$
+
+$$
+\int f(x)dx = F(x) + C \quad \text{(integrál konstanty)} \\
+$$
+
+### Integrace substitucí
+
+Integraci substitucí používáme k výpočtu integrálů funkcí, které jsou složené z více funkcí. V takovém případě nahradíme vnitřní funkci pomocí substituce a integrál se zjednoduší na integrál jednodušší funkce.
+
+#### Předpis
+
+$$
+\int f(g(x)) \cdot g'(x) dx = \int f(u) du = F(u) + C = F(g(x)) + C
+
+$$
+
+#### Příklad
+$$
+\int \frac{2x}{x^2+1} dx = \int \frac{1}{x^2+1} \cdot 2x dx = \int \frac{1}{u} du = \ln |u| + C = \ln |x^2+1| + C
+
+u = x^2+1
+$$
+
+
+### Integrace per partes
+
+Integraci per partes používáme k výpočtu integrálů funkcí, které jsou součinem dvou funkcí. V takovém případě rozdělíme integrál na dvě části a jednu část integrujeme a druhou část derivujeme.
+
+#### Předpis
+$$
+\int f(x) \cdot g'(x) dx = f(x) \cdot g(x) - \int f'(x) \cdot g(x) dx
+$$
+
+$$
+\int u \cdot v' dx = u \cdot v - \int u' \cdot v dx
+$$
+
+#### Příklad
+
+$$
+\int x \cdot \sin x dx = x \cdot (-\cos x) - \int 1 \cdot (-\cos x) dx = -x \cdot \cos x + \sin x + C
+$$
+
+### Integrace parciální zlomky
+
+Integraci parciálních zlomků používáme k výpočtu integrálů racionálních funkcí. V takovém případě rozložíme racionální funkci na součet parciálních zlomků a každý parciální zlomek integrujeme zvlášť.
+
+#### Předpis
+
+$$
+\frac{P(x)}{Q(x)} = \frac{P_1(x)}{Q_1(x)} + \frac{P_2(x)}{Q_2(x)} + \dots + \frac{P_n(x)}{Q_n(x)}
+$$
+
+#### Příklad
+
+$$
+\int \frac{2x^2+3x+1}{x^3+2x^2+x} dx = \int \frac{2x^2+3x+1}{x(x+1)^2} dx = \int \frac{A}{x} + \frac{B}{x+1} + \frac{C}{(x+1)^2} dx = \int \frac{A(x+1)^2 + Bx(x+1) + Cx}{x(x+1)^2} dx
+$$
+
+$$
+2x^2+3x+1 = A(x+1)^2 + Bx(x+1) + Cx
+$$
+
+$$
+2x^2+3x+1 = Ax^2 + 2Ax + A + Bx^2 + Bx + Cx
+$$
+
+$$
+2x^2+3x+1 = (A+B)x^2 + (2A+B+C)x + A
+$$
+
+$$
+\begin{cases}
+A+B = 2 \\
+2A+B+C = 3 \\
+A = 1
+\end{cases}
+$$
+
+$$
+\begin{cases}
+A = 1 \\
+B = 1 \\
+C = 0
+\end{cases}
+$$
+
+$$
+\int \frac{2x^2+3x+1}{x^3+2x^2+x} dx = \int \frac{1}{x} + \frac{1}{x+1} + \frac{0}{(x+1)^2} dx = \ln |x| + \ln |x+1| + C = \ln |x(x+1)| + C
+$$
+
