--- a/2. Signály, zpracování informace/6. Signály a systémy. LTI systémy. Přenosová funkce, impulsní odezva. Konvoluce u číslicových signálů..md
+++ b/2. Signály, zpracování informace/6. Signály a systémy. LTI systémy. Přenosová funkce, impulsní odezva. Konvoluce u číslicových signálů..md
@@ -1,5 +1,6 @@
-signál -  nositel informace
-Co je informace závisí na konkrétní úloze
+### Signál
+- nositel informace, co je informace závisí na konkrétní úloze
+- signál je projevem činnosti systému
 
 ### Analogový signál
 - spojitý v čase i v hodnotách (definován v libovolném časovém okamžiku, může nabývat libovolné hodnoty)
@@ -76,33 +77,65 @@ $$
 - energie na jeden vzorek  
 ![[LTI (Linear Time Invariant) systémy]]
 
+### Systém
+- dokáže generovat, zpracovávat, modifikovat a přijímat signály
+- [[Signál]] je projevem činnosti systému
+
+#### Klasifikace systémů
+1. Podle typu vstupu a výstupu
+    - spojité
+    - diskrétní (číslicové)
+    - hybridní fungují jako převodník mezi analogovým a číslicovým signálem
+2. Podle kauzality
+    - kauzální, odezva závisí pouze na současných a minulých hodnotách vstupu
+    - nekauzální, odezva závisí i na budoucích hodnotách vstupu, nelze realizovat v reálném čase
+3. podle linearity
+   - palatí podmínka $F(a x_1 + b x_2) = a F(x_1) + b F(x_2)$
+4. podle časové invariance
+   - platí podmínka $F(x(t - t_0)) = y(t - t_0)$
+   - výstup je posunutý v čase o stejnou hodnotu jako vstup
+   - jinak řečeno "Chování systému se nemění v čase."
 
 ### LTI (Linear Time Invariant) systémy
-- lineární
-- časově invariantní
-- výstup je lineární kombinací vstupu a impulsní odezvy
-- výstup je posunutý v čase o stejnou hodnotu jako vstup
+- lineární a časově nezávislé systémy
+- u spojitých systémů jejich chování popisují diferenciální rovnice s konst. koeficienty
+$$
+a_n \frac{d^n y(t)}{dt^n} + a_{n-1} \frac{d^{n-1} y(t)}{dt^{n-1}} + ... + a_1 \frac{dy(t)}{dt} + a_0 y(t) = b_m \frac{d^m x(t)}{dt^m} + b_{m-1} \frac{d^{m-1} x(t)}{dt^{m-1}} + ... + b_1 \frac{dx(t)}{dt} + b_0 x(t)
+$$
+- u diskrétních (číslicových) systémů jejich chování popisují diferenční rovnice s konst. koeficienty
 
-#### Lineární systém
-- vstup $x_1(t)$, $x_2(t)$
-- výstup $y_1(t)$, $y_2(t)$
-- vstup $x(t) = a_1 x_1(t) + a_2 x_2(t)$
-- výstup $y(t) = a_1 y_1(t) + a_2 y_2(t)$
-- $a_1$, $a_2$ jsou konstanty
-- výstup je lineární kombinací vstupů
+#### Odvození diferenční rovnice
 
+první derivaci u diskrétních systémů nahradíme rozdílem
+$$
+x'(n) = {x(n) - x(n-1)}
+$$
 
-### Přenosová funkce
-- vstup $x(t)$
-- výstup $y(t)$
-- $y(t) = h(t) * x(t)$
-- $h(t)$ je impulsní odezva
-- $H(s)$ je přenosová funkce
+druhou derivaci
+$$
+x''(n) = {x'(n) - x'(n-1)} = {x(n) - 2x(n-1) + x(n-2)}
+$$
+atd.
 
-$$H(s) = \frac{Y(s)}{X(s)} = \frac{\mathcal{L}\{y(t)\}}{\mathcal{L}\{x(t)\}}$$
+Dosazedním do diferenciální rovnice dostaneme diferenční rovnici
+$$
+A_0 y(n) + A_1 y(n-1) + ... + A_n y(n-N) = B_0 x(n) + B_1 x(n-1) + ... + B_m x(n-M)
+$$
 
-- $s$ je komplexní proměnná
-- $s = \sigma + j \omega$
-- $\sigma$ je reálná část
-- $\omega$ je imaginární část
-- $s$ je Laplaceův operátor
+ta lze přepsat do podo
+$$
+y(n) = B'_0 x(n) + B'_1 x(n-1) + ... + B'_m x(n-M) - A'_1 y(n-1) - ... - A'_n y(n-N)
+$$
+
+je li $N=0$ a je systém nerekurzivní FIR(Finite Impulse Response) - systém s konečnou odezvou, v opačném případě je rekurzivní IIR(Infinite Impulse Response) - systém s nekonečnou impulstní. odezvou
+
+#### Klíčové vlastnosti LTI systémů
+Chování libovolného LTI systému lze popsat pomocí odezvy na jednotkový impulz $h[n]$, tato operace se nazývá [[Konvoluce]].
+
+### Konvoluce #Konvoluce
+Matematická funkce postihující interakcí signálu a systému popsaného impulsní odezvou.
+
+#### Předpis
+$$
+y[n] = x[n]*h[n] = \sum_{k=-\infty}^{\infty} x[k] h[n-k]
+$$
