Kultivace poznámek ML

--- a/ML/BM25.md
+++ b/ML/BM25.md
@@ -10,11 +10,11 @@ Výsledná rovnice při použití TF transformace a počítání relevance pomoc
 $$
 sim(q, d) = \sum^N_{i=1} x_i y_i = \sum_{w ∈ q ∩ d} c(w, q) \frac{(k+1)c(w,d)}{c(w, d)+k} \log\left(\frac{M + 1} {df(w)} \right) 
 $$
-$w$ = word (slovo)
-$q$ = query (dotaz)
-$d$ = document
-$M$ = celkový počet dokumentů v kolekci 
-$df(w)$ = celkový počet dokumentů obsahující slovo w (document frequency)
+- $w$ = word (slovo)
+- $q$ = query (dotaz)
+- $d$ = document
+- $M$ = celkový počet dokumentů v kolekci 
+- $df(w)$ = celkový počet dokumentů obsahující slovo w (document frequency)
 
 Kromě TF transformace se používá normalizace délky dokumentu. Dlouhý dokument bude mít větší šanci vyhledání uživatelskými dotazy.
 
@@ -27,8 +27,8 @@ Výsledná rovnice BM25 při počítání relevance pomocí skalárního součin
 $$
 sim(q, d) = \sum^N_{i=1} x_i y_i = \sum_{w ∈ q ∩ d} c(w, q) \frac{(k+1)c(w,d)}{c(w, d)+k\left(1 - b + b\frac{d}{avdl}\right)} \log\left(\frac{M + 1} {df(w)} \right) 
 $$
-V praxi se používá rozšířený BM25:
-- BM25F pro strukturované dokumenty (F = fields)
-- BM25+ zabraňuje příliš velké penalizaci dlouhých dokumentů
+> [!note] V praxi se používá rozšířený BM25:
+>- BM25F pro strukturované dokumenty (F = fields)
+>- BM25+ zabraňuje příliš velké penalizaci dlouhých dokumentů
 
 BM25 používá defaultně [[Elasticsearch|Elasticsearch]]
