přejmenování a uklizení obrázků

--- a/Databáze/27. Konceptuální návrh relačních databází, základní konstrukty, ER diagram, kardinalita, parcialita, závislost..md
+++ b/Databáze/27. Konceptuální návrh relačních databází, základní konstrukty, ER diagram, kardinalita, parcialita, závislost..md
@@ -17,13 +17,13 @@ Proč:
 
 ## Konceptuální vrstva
 1. Chenova notace
-![[Pasted image 20240110144541.png]]
+![[Chenova notace.png]]
 2. UML Notace
-![[Pasted image 20240110144502.png]]
+![[UML Notace.png]]
 3. Logická databázová vrstava - relační DB
-![[Pasted image 20240110144627.png]]
+![[Logická databázová vrstava.png]]
 4. SQL DDL pro MS SQL server
-![[Pasted image 20240110144652.png]]
+![[SQL DDL pro MS SQL server.png]]
 
 ### Metodika tvorby datových modelů
 #### Přístupy
@@ -38,7 +38,7 @@ zachycuje požadavky klienta
 - zachycuje doménu problému ve formě entit (objektů), vztahů (relationship) mezi nimi a kladených omezení
 - je úplně nezávislý na implementačních detailech (použitý SŘDB, hardwarová platforma, programovací jazyků a databázovém modelu (relační, hierarchický, síťový, objektový)
 - forma: vhodné využít existující konvence, diagram
-![[Pasted image 20240110145303.png]]
+![[Konceptualni_modelovani.png]]
 **Model** je soubor pojmů, nástrojů a technik pro modelování
 - Výsledkem modelování je schéma
 - Schéma se často zobrazuje formou diagramu
@@ -53,14 +53,14 @@ Optimální datový model
 1. Entitně-relační model (Entity-Relationship model) využívající ER(A) diagram - Chen (1976)
 	- není standardizován, existuje mnoho notací
 	- Chenova (původní)
-	  ![[Pasted image 20240110215704.png]]
+	  ![[Chenova (původní).png]]
 	- Barkrova (Oracle)
-	  ![[Pasted image 20240110215708.png]]
+	  ![[Barkrova.png]]
 	- Information Engineering
-	  ![[Pasted image 20240110215711.png]]
+	  ![[Information Engineering.png]]
 2. UML model využívající UML diagram tříd (class diagram)
 		- standizován
-		  ![[Pasted image 20240110220200.png]]
+		  ![[UML_class_diagram.png]]
 
 ## Konstrukty konceptuálního modelu
 - Entita #entita
@@ -150,7 +150,7 @@ jsou explicitně vyjádřené podmínky, které má databáze splňovat
 - **Slabá entita** – je identifikačně a existenčně závislá na jiné entitě.
 
 Pokud máme slabou entitu, nelze její instance rozlišit pouze podle vlastních atributů. Identifikujeme jí tedy pomocí toho, že je v povinném tzv. identifikačním vztahu k jiné rodičovské entitě. Její primární klíč bude složený a bude obsahovat i primární klíč rodičovské entity. příkl. kópie-kniha, sál-kino
-![[Pasted image 20240110223222.png]]
+![[silna_slaba_entita.png]]
 
 #### Příklad – specifikace požadavků
 
@@ -164,7 +164,7 @@ Legenda:
 *vztah* – atribut vztahu
 entitní IO – vztahové IO
 
-![[Pasted image 20240110223605.png]]
+![[Studet_se_hlasi.png]]
 - Rodné číslo jednoznačně identifikuje studenta.
 - Název školy a město jednoznačně identifikuje školu.
 - Průměr u studenta a školné u školy jsou nepovinné.
@@ -184,21 +184,21 @@ Konceptuální návrh databáze #Konceptuální_návrh_databáze
 9. Zkonzultovat navržený diagram se zákazníkem
 
 Potřebujeme evidovat na jaké školy se studenti hlásí a na jaké už chodili.
-![[Pasted image 20240112161552.png]]
+![[vice_stejnych_cizich_klicu.png]]
 
 Každý zaměstnanec může mít jednoho přímého
 nadřízeného. Každý zaměstnanec může řídit víc
 podřízených.
-![[Pasted image 20240112161619.png]]
+![[Vazba_na_sebe.png]]
 Další příklady:
 - osoba a vztah je manželem jiné osoby
 - součástka a vztah je částí jiné součástky
 
 ### Modelování n-árního vztahu
 Potřebujeme evidovat jaké léky byly předepisovány pacientům a jakými lékaři. Každý lékař může předepisovat léky více pacientům. Každý lék může být předepsán více pacientům. Každému pacientovi můžou předepisovat různé léky různí lékaři.
-![[Pasted image 20240112161821.png]]
+![[n-narni_vztah.png]]
 
 ### Redundantní vztah
 Do kterého města chodí student do školy je možné odvodit přes školu, do které chodí.
 Město, ve kterém se student narodil odvodit nelze.
-![[Pasted image 20240112162027.png]]
+![[Redundantni_vztah.png]]
