--- a/Databáze/29. Relační model, základní konstrukty, realizace vztahů v relačním modelu, integritní omezení..md
+++ b/Databáze/29. Relační model, základní konstrukty, realizace vztahů v relačním modelu, integritní omezení..md
@@ -1,6 +1,6 @@
 
 ## Relační model #relační_model
-![[Pasted image 20240112162355.png]]
+![[navrh_databaze.png]]
 - založen na pevném matematickém základu
 	- koncept relací (teorie množin, predikátová logika)
 	- relační algebra
