--- a/Počítačové sítě a Internet/20. Principy vrstvené architektury počítačových sítí, referenční model OSI. Charakteristika lokálních počítačových sítí..md
+++ b/Počítačové sítě a Internet/20. Principy vrstvené architektury počítačových sítí, referenční model OSI. Charakteristika lokálních počítačových sítí..md
@@ -68,7 +68,7 @@
 - univerzálnější
 - lépe odpovídá charakteru sítí
 
->**OSI vs Internet (TCP/IP)**>![[Pasted image 20240117201635.png]]
+>**OSI vs Internet (TCP/IP)**>![[vrstvy_internetu_OSI-ISO.png]]
 
 ## Architektura Internetu
 ### existující nižší vrstvy
@@ -87,7 +87,7 @@
 ### aplikační vrstva
 - protokoly konkrétních služeb
 
->Rodina TCP/IP ![[Pasted image 20240117201912.png]]
+>Rodina TCP/IP ![[vrstvy_internetu.png]]
 
 
 
