--- a/Programování/19. Správa procesů v operačním systému, vztah programu a procesu, životní cyklus procesu..md
+++ b/Programování/19. Správa procesů v operačním systému, vztah programu a procesu, životní cyklus procesu..md
@@ -57,10 +57,10 @@ Správa procesů je zásadní pro efektivní využívání systémových prostř
 Hlavní rozdíl mezi vláknem a procesem spočívá v tom, že procesy mají oddělenou
 paměť, ale vlákna ji mezi sebou sdílejí.
 
->Rozdíl mezi vlákny a procesy z hlediska sdílení paměti.![[Pasted image 20240117194243.png]]
+>Rozdíl mezi vlákny a procesy z hlediska sdílení paměti.![[procesy.png]]
 
 
->Napojení vláken vytvářených v prostoru jádra a v prostoru aplikací![[Pasted image 20240117194440.png]]
+>Napojení vláken vytvářených v prostoru jádra a v prostoru aplikací![[jadro_aplikace.png]]
 
 ## Práce s vlákny na úrovni kódu
 O vzniku vláken rozhoduje autor programu, neboť jen on je schopen posoudit, kdy se jádro
