Intenznivnější sjednocení poznámek

--- a/Počítače/Internet/20. Principy vrstvené architektury počítačových sítí, referenční model OSI. Charakteristika lokálních počítačových sítí..md
+++ b/Počítače/Internet/20. Principy vrstvené architektury počítačových sítí, referenční model OSI. Charakteristika lokálních počítačových sítí..md
@@ -1,4 +1,4 @@
-## Principy vrstvené architektury počítačových sítí
+# Principy vrstvené architektury počítačových sítí
 - zpravidla organizována do úrovní (vrstev)
 - jedna vrstva řeší vždy vymezenou část problému
 - rozkládá komunikaci na jednodušší podproblémy
@@ -88,10 +88,6 @@
 - protokoly konkrétních služeb
 
 >Rodina TCP/IP ![[vrstvy_internetu.png]]
-
-
-
-
 
 # Charakteristika lokálních počítačových sítí
 - malý rozsah – místnost až areál
