--- a/Signály/6. Signály a systémy. LTI systémy. Přenosová funkce, impulsní odezva. Konvoluce u číslicových signálů..md
+++ b/Signály/6. Signály a systémy. LTI systémy. Přenosová funkce, impulsní odezva. Konvoluce u číslicových signálů..md
@@ -79,7 +79,7 @@ $$
 
 ### Systém
 - dokáže generovat, zpracovávat, modifikovat a přijímat signály
-- [[Signál]] je projevem činnosti systému
+- [[Signály|Signál]] je projevem činnosti systému
 
 #### Klasifikace systémů
 1. Podle typu vstupu a výstupu
