--- a/Signály/7. Fourierovy řady. Diskrétní Fourierova transformace, její použití a interpretace. Spektrum signálu, FFT. Číslicové filtry FIR a IIR. Filtrace v čase nebo prostoru.md
+++ b/Signály/7. Fourierovy řady. Diskrétní Fourierova transformace, její použití a interpretace. Spektrum signálu, FFT. Číslicové filtry FIR a IIR. Filtrace v čase nebo prostoru.md
@@ -1,7 +1,8 @@
-### Fourievory řady #Furierovy_řady
+# Fourierovy řady
 - umožňují rozložit a složit libovolný periodický spojitý signál na harmonické složky
 
-#### polární tvar Fourierovy řady
+## Typy tvarů Fourierových řad
+### polární tvar Fourierovy řady
 $$
 x(t) = \sum_{k=0}^{\infty} c_k cos(k 2 \pi  f_0+ \varphi_k)
 $$
@@ -9,7 +10,7 @@ $$
 - Dílčí složky jsou harmonicky vázané kosinusovky s amplitudami $c_k$ a a fázovými posuny $\varphi_k$
 - při analýze signálu je nutné spočítat koeficienty $c_k$ a $\varphi_k$
 
-#### exponenciální tvar Fourierovy řady
+### exponenciální tvar Fourierovy řady
 - Je vhodnější pro praktický výpočet.
 $$
 x(t) = \sum_{k=-\infty}^{\infty} X_k e^{j k 2 \pi f_0 t}
@@ -18,20 +19,20 @@ $$
 - jedná se součet harmonicky vázaných exponenciál
 - $X_k$ je komplexní koefficient, definová i pro záporné indexy $k$
 
-#### praktické využití
+## praktické využití
 
 - umožňuje provést **frekvenční analýzu** signálu, tj. určit z jakých dílčích signálů ( kosinusovek o různých frekvencích a amplitudách) se skládá
 - výsledkem je **spektrum signálu**, ze spektra lze získat detailní informace o obsahu signálu
 - spektrum period. signálů lze jednoduše zobrazit jakožto z**ávislost amplitudy a fáze na frekvenci**
 - znalost spektra umožňuje analýzu ale i např. kompresi signálů - je li spektrum signálu v čase proměnné, počítá se postupně v rámci *kratších úseků* signálu (krátkodobé spektrum) a zobrazuje se pak pomocí **spektrogramu**
 
-### Diskrétní Fourierova transformace, její použití a interpretace
+## Diskrétní Fourierova transformace, její použití a interpretace
 
 - DFT je diskrétní verze Fourierovy transformace
 - diskrétní znamená, že se počítá pouze konečný(nespojitý) počet harmonických složek, tj. konečný počet koeficientů
 - DFT je výpočetně náročná, proto se používá algoritmus FFT (Fast Fourier Transform), který je výpočetně efektivnější
 
-#### Předpis
+## Předpis
 $$
 X[k] = \frac{1}{N} \sum_{n=0}^{N-1} x[n] e^{-j k \frac{2 \pi}{N} n}
 $$
@@ -42,12 +43,12 @@ $$
 - $k$ je index koeficientu
 - $n$ je index vzorku
 
-#### Použití
+## Použití
 - DFT se používá pro analýzu diskrétních signálů
 - výsledkem je **frekvenční spektrum signálu**, které obsahuje informace o frekvencích a amplitudách harmonických složek signálu
 
 
-### FFT #FFT
+## FFT #FFT
 - Fast Fourier Transform je rychlý algoritmus pro výpočet DFT
 - poskytuje úplně stejné hodnoty jako DFT , ale mnohemrychlejším způsobem
 - vysoké rychlosti je dosaženo optimalizovaným výpočtem,
@@ -55,7 +56,7 @@ $$
 - dále podobnost mezi lichými a sudými koeficienty, atd.
 - nejrychleji funguje v případech, že **N je mocninou 2**
 
-### Číslicové filtry FIR a IIR
+## Číslicové filtry FIR a IIR
 #### FIR
 filtr s končenou impulsní odezvou
 
@@ -92,7 +93,7 @@ filtr s končenou impulsní odezvou
     h(n) = \frac{1}{N} \sum_{k=0}^{N-1} \delta[n-k] \quad \text{impulsní odezva}
     $$
 ---
-### Z-transformace
+## Z-transformace
 Převádí časový popis číslicových signálů do komplexní roviny, kde lze snáze studovat chování systémů a jejich frekvenční charakteristiky.
 #### Obecný předpis
 $$
@@ -107,7 +108,7 @@ operátor $z^{-1}$ znamená zpoždění o 1 vzorek
 
 
 ---
-### Filtrace v čase nebo prostoru
+## Filtrace v čase nebo prostoru
 
 ### Spektrum signálu
 - je závislost amplitudy a fáze na frekvenci
