--- a/Specializace Aplikovaná informatika/6. Hardware a elektronika.md
+++ b/Specializace Aplikovaná informatika/6. Hardware a elektronika.md
@@ -1,9 +1,9 @@
 ## Hardware a elektronika
 
-[[34. Kombinační logické obvody (jejich charakteristika, možnosti realizace pomocí logických hradel, multiplexorů a dekodérů.]]
+[[Kombinační logické obvody|34. Kombinační logické obvody (jejich charakteristika, možnosti realizace pomocí logických hradel, multiplexorů a dekodérů]]
 
-[[35. Sekvenční obvody (základní vlastnosti a typy klopných obvodů, registry, posuvné registry, čítače, návrh automatů typu Mealy a Moore).]]
+[[Sekvenční obvody|35. Sekvenční obvody (základní vlastnosti a typy klopných obvodů, registry, posuvné registry, čítače, návrh automatů typu Mealy a Moore).]]
 
-[[36. Aritmetické obvody (výpočet aritmetických operací pomocí číslicových obvodů).]]
+[[Aritmetické obvody|36. Aritmetické obvody (výpočet aritmetických operací pomocí číslicových obvodů).]]
 
-[[37. Procesory, FPGA obvody (realizace automatů pomocí procesorů a FPGA).]]
+[[VHDL|37. Procesory, FPGA obvody (realizace automatů pomocí procesorů a FPGA).]]
