upravené poznámky ze signálů

--- a/Specializace Aplikovaná informatika/Rozepsané otázky/6. Signály a systémy. LTI systémy. Přenosová funkce, impulsní odezva. Konvoluce u číslicových signálů..md
+++ b/Specializace Aplikovaná informatika/Rozepsané otázky/6. Signály a systémy. LTI systémy. Přenosová funkce, impulsní odezva. Konvoluce u číslicových signálů..md
@@ -5,7 +5,7 @@
 ![[Signály]]
 
 ### Převod analogového signálu na číslicový
-![[Převod analogového signálu na číslicový]]
+![[AD převod]]
 # Systém
 - dokáže generovat, zpracovávat, modifikovat a přijímat signály
 - [[Signály|Signál]] je projevem činnosti systému
