--- a/Specializace Aplikovaná informatika/Rozepsané otázky/7. Fourierovy řady. Diskrétní Fourierova transformace, její použití a interpretace. Spektrum signálu, FFT. Číslicové filtry FIR a IIR. Filtrace v čase nebo prostoru.md
+++ b/Specializace Aplikovaná informatika/Rozepsané otázky/7. Fourierovy řady. Diskrétní Fourierova transformace, její použití a interpretace. Spektrum signálu, FFT. Číslicové filtry FIR a IIR. Filtrace v čase nebo prostoru.md
@@ -1,1 +1,15 @@
+# Permutace
+> [!tip] Permutace
+Vzájemně jednoznačné zobrazení.
+
+## Zápis permutací
+### Dvouřádkový zápis:
+
+### Součin disjunktních cyklů
+Každou permutaci lze
+
+## Příklady 
+- [[Permutace příklad]]
+
+
 ![[Fourierovy řady]]
