--- a/Programování/12. Algoritmy pro vyhledávání a řazení, složitost algoritmů.md
+++ b/Programování/12. Algoritmy pro vyhledávání a řazení, složitost algoritmů.md
@@ -32,7 +32,7 @@
     - Časová složitost: O(n^2) v nejhorším případě, ale obvykle O(n log n).
 
 # Složitost algoritmů:
-![[Složitost algoritmů]]
+![[TUL-SZZ/Programování/Složitost algoritmů]]
 
 1. **Časová složitost:**
     
